[tool.poetry]
name = "github-users"
version = "0.1.0"
description = ""
authors = ["alisonamerico <alison.americo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"


[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.770"
responses = "^0.10.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
